# ml.school

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: training.yml
pipelines/: common.py  endpoint.py  inference.py  models.py  training.py
scripts/: llm_traffic.py  send_csv_requests.py
tests/: test_inference.py
